commit update; bhay leptop spasi

--- a/resources/lang/id.json
+++ b/resources/lang/id.json
@@ -1,5 +1,6 @@
 {
-	"Home": "Beranda",
-	"About Us": "Tentang Kami",
-	"Contact Us": "Hubungi Kami"
+	"Home": "BERANDA",
+	"About Us": "TENTANG KAMI",
+	"Contact Us": "HUBUNGI KAMI",
+	"create account": "BUAT AKUN"
 }
