--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -1,5 +1,6 @@
 {
-	"Home": "Home",
-	"About Us": "About Us",
-	"Contact Us": "Contact Us"
+	"Home": "HOME",
+	"About Us": "ABOUT US",
+	"Contact Us": "CONTACT US",
+	"create account": "CREATE ACCOUNT"
 }
