login : fix route login ke auth

--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -2,5 +2,6 @@
 	"Home": "HOME",
 	"About Us": "ABOUT US",
 	"Contact Us": "CONTACT US",
-	"create account": "CREATE ACCOUNT"
+	"create account": "CREATE ACCOUNT",
+	"Investment Plan": "INVESTMENT PLAN"
 }
