--- a/resources/lang/id.json
+++ b/resources/lang/id.json
@@ -2,5 +2,6 @@
 	"Home": "BERANDA",
 	"About Us": "TENTANG KAMI",
 	"Contact Us": "HUBUNGI KAMI",
-	"create account": "BUAT AKUN"
+	"create account": "BUAT AKUN",
+	"Investment Plan": "RENCANA INVESTASI"
 }
