add fitur convert at dashboard seller

--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -10,7 +10,7 @@
 	"Confirm Password": "Confirm Password",
 	"Remember Me": "Remember Me",
 	"Your Name": "Your Name",
-	"VIP Wallet ID": "VIP Wallet ID",
+	"Your Wallet ETH": "Your Wallet ETH",
 	"Already have account": "Already have account",
 	"Forgot password": "Forgot Password",
 	"Create an account": "Create an account",
