--- a/resources/lang/id.json
+++ b/resources/lang/id.json
@@ -10,7 +10,7 @@
 	"Confirm Password": "Konfirmasi Password",
 	"Remember Me": "Ingat Saya",
 	"Your Name": "Nama Anda",
-	"VIP Wallet ID": "ID VIP Wallet",
+	"Your Wallet ETH": "Dompet ETH Anda",
 	"Already have account": "Sudah Punya Akun",
 	"Forgot password": "Lupa Password",
 	"Create an account": "Buat Akun",
