add bahasa jepang

--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -20,6 +20,6 @@
 	"Register": "Register",
 	"Send Link": "Send Link",
 	"info reset": "Reset Link will be sent to your email address ",
-
+	"bulan": "months ",
 	"Sign Out": "Sign Out"
 }
