--- a/resources/lang/id.json
+++ b/resources/lang/id.json
@@ -20,6 +20,6 @@
 	"Register": "Daftar",
 	"Send Link": "Kirim Link",
 	"info reset": "Link ganti password akan dikirimkan ke email anda",
-
+	"bulan": "bulan",
 	"Sign Out": "Keluar"
 }
