add new key at lang

--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -21,5 +21,6 @@
 	"Send Link": "Send Link",
 	"info reset": "Reset Link will be sent to your email address ",
 	"bulan": "months ",
-	"Sign Out": "Sign Out"
+	"Sign Out": "Sign Out",
+	"Notice": "Notification"
 }
