--- a/resources/lang/jp.json
+++ b/resources/lang/jp.json
@@ -21,5 +21,6 @@
 	"Send Link": "リンクを送る",
 	"info reset": "あなたの電子メールにパスワード変更リンクが送信されます",
 	"bulan": "月",
-	"Sign Out": "サインアウト"
+	"Sign Out": "サインアウト",
+	"Notice": "お知らせ"
 }
